--- a/src/app/addtocart/addtocart.component.html
+++ b/src/app/addtocart/addtocart.component.html
@@ -4,7 +4,6 @@
     <img src="https://www.pngfind.com/pngs/m/272-2727925_continue-shopping-empty-cart-png-transparent-png.png"
       style="height: 200px;width: 200px; ">
   </div>
-
   <h1 class="text-center">Your cart is currently empty</h1>
   <p class="text-center">Before proceed to checkout you must add some products to your shopping cart. You will find a
     lot of interesting
@@ -42,45 +41,36 @@
                 <p><strong>{{item.title}}</strong></p>
                 <p>{{item.description}}</p>
                 <p><strong>Amout:₹</strong>{{item.price}}/-</p>
-                <button type="button" class="btn btn-primary btn-sm me-1 mb-2" data-mdb-toggle="tooltip"
-                  title="Remove item" (click)="removeItem(item.id)">
-                  <i class="fas fa-trash"></i>
-                </button>
-                <button type="button" class="btn btn-danger btn-sm mb-2" data-mdb-toggle="tooltip"
-                  title="Move to the wish list">
-                  <i class="fas fa-heart"></i>
-                </button>
+
                 <!-- Data -->
               </div>
 
               <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-                <!-- Quantity -->
-                <div class="d-flex mb-4" style="max-width: 300px">
-                  <div class="quantity-group">
-                    <button class="btn btn-primary" (click)="handleQuantity('min',item)">-</button>
-                    <input type="text" value="{{item.quantity}}">
-                    <button class="btn btn-primary" (click)="handleQuantity('plus',item)">+</button>
-                  </div>
-                </div>
-                <!-- Quantity -->
 
+
+                <!-- Quantity -->
+                <P class="text-start text-md-center"><b>Quantity:-</b><span>{{item.quantity}}</span></P>
+                <!-- Quantity -->
                 <!-- Price -->
                 <p class="text-start text-md-center">
                   <strong>Total Price:₹{{item.total}}/-</strong>
                 </p>
                 <!-- Price -->
+                <div class=" text-md-center" style="margin-left: 64px;">
+                  <div class="d-flex mb-4" style="max-width: 300px">
+                    <button type="button" class="btn btn-primary btn-sm me-1 mb-2" data-mdb-toggle="tooltip"
+                      title="Remove item" (click)="removeToCart(item.id)">
+                      <i class="fas fa-trash"></i>
+                    </button>
+                    <button type="button" class="btn btn-danger btn-sm mb-2" data-mdb-toggle="tooltip" routerLink="/"
+                      title="Move to the wish list">
+                      <i class="fas fa-heart"></i>
+                    </button>
+                  </div>
+                </div>
               </div>
-
-
-
               <hr class="my-4" />
 
-
-
-
-            </div>
-            <div class="empty">
-              <button class="btn btn-danger"  (click)="empty()">Empty</button>
             </div>
 
           </div>
@@ -95,8 +85,8 @@
           <div class="card-body">
             <ul class="list-group list-group-flush">
               <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                Products
-                <span>{{grandTotal}}</span>
+                Total Products
+                <span>{{Quantity}}</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                 Shipping
@@ -104,12 +94,10 @@
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                 <div>
-                  <strong>Total amount</strong>
-                  <strong>
-                    <p class="mb-0">(including VAT)</p>
-                  </strong>
+                  <strong>Total Amount</strong>
+
                 </div>
-                <span><strong>{{this.getTotalPrice()}}</strong></span>
+                <span><strong>{{grandTotal|currency :"INR"}}</strong></span>
               </li>
             </ul>
 
