--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,9 @@
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid" style="background-color: #eaf8f8;">
             <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -17,19 +18,21 @@
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
                     </li>
-    
+
                 </ul>
                 <ul class="d-flex navbar-nav">
                     <li><a class="seller nav-link active" routerLink="/register">Seller</a></li>
                     <li><a class="nav-link active" routerLink="/login">Login</a></li>
+                    <li><a class="nav-link active" routerLink="/my-order">my-order</a></li>
                 </ul>
+                
                 <li class="nav-link active">
                     <button class="btn btn-light" routerLink="/addtocart">
-                        <i style="font-size: 30px;" class="fas fa-cart-plus">{{totalitem}}</i>
+                        <i style="font-size: 30px;" class="fas fa-cart-plus">{{cartItems}}</i>
                         <div style="font-size: 20px; color:#000;" class="badge bg-dark"></div>
                     </button>
                 </li>
-    
+
             </div>
         </div>
     </nav>
