header change after login

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,19 +20,26 @@
                     </li>
 
                 </ul>
-                <ul class="d-flex navbar-nav">
-                    <li><a class="seller nav-link active" routerLink="/register">Seller</a></li>
-                    <li><a class="nav-link active" routerLink="/login">Login</a></li>
-                    <li><a class="nav-link active" routerLink="/my-order">my-order</a></li>
-                </ul>
-                
+                <div [ngSwitch]="menuType">
+                    <ul class="d-flex navbar-nav" *ngSwitchCase="'default'">
+                        <li><a class="seller nav-link active" routerLink="/register">Seller</a></li>
+                        <li><a class="nav-link active" routerLink="/login">Login</a></li>
+                        <li><a class="nav-link active" routerLink="/my-order">my-order</a></li>
+                    </ul>
+
+                    <ul class="d-flex navbar-nav" *ngSwitchCase="'user'">
+                        <li><a class="nav-link active">{{userName | titlecase}}</a></li>
+                        <li><a class="nav-link active" routerLink="my-orders">My Orders</a></li>
+                        <li><a class="nav-link active carsul" (click)="userLogout()">Logout</a></li>
+                    </ul>
+                </div>
+
                 <li class="nav-link active">
                     <button class="btn btn-light" routerLink="/addtocart">
                         <i style="font-size: 30px;" class="fas fa-cart-plus">{{cartItems}}</i>
                         <div style="font-size: 20px; color:#000;" class="badge bg-dark"></div>
                     </button>
                 </li>
-
             </div>
         </div>
     </nav>
