--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -78,7 +78,8 @@
                 </div>
                 <div class="form mt-3">
                   <div class="inputbox"> <input type="text" name="name" class="form-control" required="required">
-                    <span>Cardholder Name</span> </div>
+                    <span>Cardholder Name</span>
+                  </div>
                   <div class="inputbox"> <input type="text" name="name" min="1" max="999" class="form-control"
                       required="required"> <span>Card Number</span> <i class="fa fa-eye"></i> </div>
                   <div class="d-flex flex-row">
@@ -94,7 +95,8 @@
             <div class="tab-pane fade" id="paypal" role="tabpanel" aria-labelledby="paypal-tab">
               <div class="px-5 mt-5">
                 <div class="inputbox"> <input type="text" name="name" class="form-control" required="required">
-                  <span>Paypal Email Address</span> </div>
+                  <span>Paypal Email Address</span>
+                </div>
                 <div class="pay px-5"> <button class="btn btn-primary btn-block">Add paypal</button> </div>
               </div>
             </div>
