--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -19,7 +19,9 @@
                         <label class="form-label" for="email">Email address</label>
                         <input type="email" id="email" class="form-control form-control-lg" formControlName="email"
                             placeholder="Enter a valid email address" required />
-                     
+                            <div class="valid-feedback">
+                                Looks good!
+                              </div>
                     </div>
 
                     <!-- Password input -->
@@ -27,7 +29,9 @@
                         <label class="form-label" for="password">Password</label>
                         <input type="password" id="password" class="form-control form-control-lg"
                             placeholder="Enter password" formControlName="password" required />
-                       
+                            <div class="valid-feedback">
+                                Looks good!
+                              </div>
                     </div>
 
                     <div class="d-flex justify-content-between align-items-center">
