--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -26,7 +26,7 @@
           <div class="mt-3">
             <label>Pin Code</label>
             <input class="form-control mt-3 input" type="pincode" formControlName="pinCode"
-              placeholder="Enter Pinn code" required>
+              placeholder="Enter Pin code" required>
           </div>
           <div class="mt-4">
             <button class="btn btn-dark">Order Now</button>
@@ -88,11 +88,11 @@
                     <div class="inputbox"> <input type="text" name="name" min="1" max="999" class="form-control"
                         required="required"> <span>CVV</span> </div>
                   </div>
-                  <div class="px-5 pay"> <button class="btn btn-success btn-block">Add card</button> </div>
+                  <div class="px-5 pay"> <button class="btn btn-success btn-block">Peyment Now</button> </div>
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="paypal" role="tabpanel" aria-labelledby="paypal-tab">
+            <div class="tab-pane fade" id="paypal" role="tabpanel" aria-labelledby="paypal- tab">
               <div class="px-5 mt-5">
                 <div class="inputbox"> <input type="text" name="name" class="form-control" required="required">
                   <span>Paypal Email Address</span>
