--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,7 +29,7 @@
 
                     <ul class="d-flex navbar-nav" *ngSwitchCase="'user'">
                         <li><a class="nav-link active">{{userName | titlecase}}</a></li>
-                        <li><a class="nav-link active" routerLink="my-orders">My Orders</a></li>
+                        <li><a class="nav-link active" routerLink="/my-order">My Orders</a></li>
                         <li><a class="nav-link active carsul" (click)="userLogout()">Logout</a></li>
                     </ul>
                 </div>
