--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -25,8 +25,8 @@
           </div>
           <div class="mt-3">
             <label>Pin Code</label>
-            <input class="form-control mt-3 input" type="pincode" formControlName="pinCode"
-              placeholder="Enter Pin code" required>
+            <input class="form-control mt-3 input" type="pincode" formControlName="pinCode" placeholder="Enter Pin code"
+              required>
           </div>
           <div class="mt-4">
             <button class="btn btn-dark">Order Now</button>
