--- a/src/app/addtocart/addtocart.component.html
+++ b/src/app/addtocart/addtocart.component.html
@@ -19,35 +19,31 @@
     <div class="row d-flex justify-content-center my-4">
       <div class="col-md-8">
         <div class="card mb-4">
-          <div class="card-header py-3">
+          <div class="card-header py-3" style="background-color: lightyellow;
+          ">
             <h5 class="mb-0">Cart items</h5>
           </div>
-          <div class="card-body">
+          <div class="card-body" style="background-color: aliceblue;">
             <!-- Single item -->
             <div class="row" *ngFor="let item of productData;let i=index">
               <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
                 <!-- Image -->
                 <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
-                  <img src="{{item.image}}" class="w-100" alt="Blue Jeans Jacket" />
+                  <img style="width: 150px" src="{{item.image}}" class="w-100px" alt="Blue Jeans Jacket" />
                   <a href="#!">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
                   </a>
                 </div>
                 <!-- Image -->
               </div>
-
               <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
                 <!-- Data -->
-                <p><strong>{{item.title}}</strong></p>
+                <p><strong>{{item.title}}</strong></p> `
                 <p>{{item.description}}</p>
                 <p><strong>Amout:₹</strong>{{item.price}}/-</p>
-
                 <!-- Data -->
               </div>
-
               <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-
-
                 <!-- Quantity -->
                 <P class="text-start text-md-center"><b>Quantity:-</b><span>{{item.quantity}}</span></P>
                 <!-- Quantity -->
@@ -70,19 +66,17 @@
                 </div>
               </div>
               <hr class="my-4" />
-
             </div>
-
           </div>
         </div>
-
       </div>
       <div class="col-md-4">
         <div class="card mb-4">
-          <div class="card-header py-3">
+          <div class="card-header py-3" style="background-color: lightyellow;
+          ">
             <h5 class="mb-0">Summary</h5>
           </div>
-          <div class="card-body">
+          <div class="card-body" style="background-color: aliceblue;">
             <ul class="list-group list-group-flush">
               <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                 Total Products
@@ -95,13 +89,12 @@
               <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                 <div>
                   <strong>Total Amount</strong>
-
                 </div>
                 <span><strong>{{grandTotal|currency :"INR"}}</strong></span>
               </li>
             </ul>
-
-            <button type="button" class="btn btn-primary btn-lg btn-block" routerLink="/checkout">
+            <button type="button" style="background-color: teal;
+            color: black;" class="btn btn-lg btn-block" routerLink="/checkout">
               Go to checkout
             </button>
           </div>
