--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,3 +4,13 @@ body{
 .carsul{
   cursor: pointer;
 }
+.navbar-brand {
+  font-size: xx-large;
+}
+.container-fluid{
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+.nav-item{
+  font-size: 20px;
+}
